* Changed
! Fixed


next version - not released yet
===============================
+ Ticket #5147, Add /randomize command-line switch for playlist randomization
+ Internal Subtitle Renderer: Convert colorspace of subtitles to match video.
+ Append files to the playlist on drag&drop while holding "Control" key
+ Enable Press and Hold gesture to make easier access to context menu on touch devices
* Updated Little CMS to v2.7 (git 926963a)
* Updated Unrar to v5.2.6
* Updated LAV Filters to v0.64.0.5:
    - LAV Video Decoder: Faster DXVA decoding in copy-back mode (direct output mode)
    - LAV Video Decoder: Support for HEVC Main10 DXVA2 decoding in copy-back mode
    - Ticket #5299, LAV Video Decoder: Fix corrupted decoding of some HEVC files
* Updated British English, Catalan, Chinese (Simplified), Czech, Dutch, Finnish, French, Galician, German,
  Greek, Japanese, Korean, Russian, Serbian, Spanish and Ukrainian translations
! EVR-CP/Sync renderers could produce wrong colors
! Ticket #2167, Prevent the task bar buttons from being RTLed when Windows is configured to use RTL layout
! Ticket #2516, VSFilter: Fix PGS/DVB subtitles with different size than video frame
! Ticket #5183, Fix a rare crash when processing after playback event
! Ticket #5239, Fix a crash when specifying a non-existent monitor in the command line (/monitor)
! Ticket #5241, Improve the handling of RTL layout for dockable bars (Playlist, Subresync, etc.)
! Ticket #5247, "Information" panel was not showing new lines until window resize
! Ticket #5259, The auto fit factor could not be modified unless auto fit was used as auto-zoom
! Ticket #5262, The "Go to next/previous subtitle" feature did not work for some subtitles


1.7.8 - 25 January 2015
=======================
+ DVB: Show current event time in the status bar
+ DVB: Add context menu to the navigation dialog
+ Add Finnish and Serbian translations
+ Ticket #907, Enable "Properties" dialog for DVD and DVB playback modes