@@ -1,6 +1,6 @@
 /*
  * (C) 2003-2006 Gabest
- * (C) 2006-2014 see Authors.txt
+ * (C) 2006-2015 see Authors.txt
  *
  * This file is part of MPC-HC.
  *
@@ -44,6 +44,7 @@
 #define INTERNAL_SOURCEFILTER_FLV       INTERNAL_FILTERS_ENABLED
 #define INTERNAL_SOURCEFILTER_GIF       INTERNAL_FILTERS_ENABLED
 #define INTERNAL_SOURCEFILTER_ASF       INTERNAL_FILTERS_ENABLED
+#define INTERNAL_SOURCEFILTER_WTV       INTERNAL_FILTERS_ENABLED
 #define INTERNAL_SOURCEFILTER_MATROSKA  INTERNAL_FILTERS_ENABLED
 #define INTERNAL_SOURCEFILTER_MP4       INTERNAL_FILTERS_ENABLED
 #define INTERNAL_SOURCEFILTER_OGG       INTERNAL_FILTERS_ENABLED
@@ -106,10 +107,10 @@
 #define HAS_SOURCEFILTERS \
     (INTERNAL_SOURCEFILTER_AVI || INTERNAL_SOURCEFILTER_CDDA || INTERNAL_SOURCEFILTER_CDXA || INTERNAL_SOURCEFILTER_DSM || INTERNAL_SOURCEFILTER_DTSAC3 ||       \
     INTERNAL_SOURCEFILTER_VTS || INTERNAL_SOURCEFILTER_FLIC || INTERNAL_SOURCEFILTER_FLAC || INTERNAL_SOURCEFILTER_FLV || INTERNAL_SOURCEFILTER_ASF ||           \
-    INTERNAL_SOURCEFILTER_MATROSKA || INTERNAL_SOURCEFILTER_MP4 || INTERNAL_SOURCEFILTER_OGG || INTERNAL_SOURCEFILTER_MPEGAUDIO || INTERNAL_SOURCEFILTER_MPEG || \
-    INTERNAL_SOURCEFILTER_REALMEDIA || INTERNAL_SOURCEFILTER_HTTP || INTERNAL_SOURCEFILTER_UDP ||INTERNAL_SOURCEFILTER_RTP || INTERNAL_SOURCEFILTER_RTSP ||      \
-    INTERNAL_SOURCEFILTER_AVI2AC3 || INTERNAL_SOURCEFILTER_RFS || INTERNAL_SOURCEFILTER_RTSP || INTERNAL_SOURCEFILTER_MMS || INTERNAL_SOURCEFILTER_RTMP ||       \
-    INTERNAL_SOURCEFILTER_AVS || INTERNAL_SOURCEFILTER_GIF)
+    INTERNAL_SOURCEFILTER_WTV || INTERNAL_SOURCEFILTER_MATROSKA || INTERNAL_SOURCEFILTER_MP4 || INTERNAL_SOURCEFILTER_OGG || INTERNAL_SOURCEFILTER_MPEGAUDIO ||  \
+    INTERNAL_SOURCEFILTER_MPEG || INTERNAL_SOURCEFILTER_REALMEDIA || INTERNAL_SOURCEFILTER_HTTP || INTERNAL_SOURCEFILTER_UDP ||INTERNAL_SOURCEFILTER_RTP ||      \
+    INTERNAL_SOURCEFILTER_RTSP || INTERNAL_SOURCEFILTER_AVI2AC3 || INTERNAL_SOURCEFILTER_RFS || INTERNAL_SOURCEFILTER_RTSP || INTERNAL_SOURCEFILTER_MMS ||       \
+    INTERNAL_SOURCEFILTER_RTMP || INTERNAL_SOURCEFILTER_AVS || INTERNAL_SOURCEFILTER_GIF)
 
 #define HAS_AUDIO_DECODERS \
     (INTERNAL_DECODER_LPCM || INTERNAL_DECODER_PS2AUDIO || INTERNAL_DECODER_REALAUDIO || INTERNAL_DECODER_PCM || INTERNAL_DECODER_AC3 || \
